[workspace]
resolver = "2"
members = ["crates/proto", "crates/relay", "crates/client", "crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Mat <bourgeois.mat@gmail.com>"]
repository = "https://github.com/matpb/ethertunnel"
rust-version = "1.85"

[workspace.dependencies]
# Internal
ethertunnel-proto = { path = "crates/proto" }
ethertunnel-relay = { path = "crates/relay" }
ethertunnel-client = { path = "crates/client" }

# Async runtime + utils
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat", "io"] }
futures = "0.3"

# Transport: WebSocket + yamux multiplexing.
# We bridge WS<->byte-stream with our own small adapter (proto::transport) rather
# than ws_stream_tungstenite, to avoid version-coupling on tungstenite.
yamux = "0.13"
async-tungstenite = "0.28"

# TLS (rustls pinned to ring for clean musl/windows cross-compiles)
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "logging", "std"] }
rustls-pki-types = { version = "1", features = ["std"] }
rcgen = "0.13"
webpki-roots = "0.26"

# HTTP proxy core
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "client", "client-legacy", "http1", "http2"] }
http-body-util = "0.1"
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
postcard = { version = "1", default-features = false, features = ["use-std"] }

# CLI / logging / misc
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
rand = "0.8"
sha2 = "0.10"
subtle = "2"
base64 = "0.22"
arc-swap = "1"
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
