[package]
name = "ethertunnel-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "EtherTunnel client daemon: outbound reverse tunnels for local services"

[dependencies]
ethertunnel-proto = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
yamux = { workspace = true }
async-tungstenite = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
webpki-roots = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
directories = "6"
serde_json.workspace = true
x509-parser = "0.18.1"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
ethertunnel-relay = { workspace = true }
