[package]
name = "ethertunnel-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "EtherTunnel wire protocol: frames, codec, and the WebSocket<->yamux transport seam"

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
yamux = { workspace = true }
async-tungstenite = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
