[package]
name = "ethertunnel-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "EtherTunnel relay server: TLS termination, hostname routing, multiplexed reverse tunnels"

[dependencies]
ethertunnel-proto = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
yamux = { workspace = true }
async-tungstenite = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
