[package]
name = "ethertunnel-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "EtherTunnel relay server: TLS termination, hostname routing, multiplexed reverse tunnels"

[dependencies]
ethertunnel-proto = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
yamux = { workspace = true }
async-tungstenite = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
arc-swap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
