[package]
name = "ethertunnel-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "EtherTunnel relay server: TLS termination, hostname routing, multiplexed reverse tunnels"

[dependencies]
ethertunnel-proto = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
yamux = { workspace = true }
async-tungstenite = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
arc-swap = { workspace = true }
rusqlite = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
instant-acme = { version = "0.8.5", default-features = false, features = ["hyper-rustls", "rcgen", "ring"] }
x509-parser = "0.18.1"
serde_json.workspace = true
hyper-rustls = { version = "0.27.9", default-features = false, features = ["ring", "webpki-tokio", "http1", "http2", "tls12"] }
rustls-pki-types = { workspace = true }
ed25519-dalek = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
